APB-141 admin css mobile responsive bugfixes, lists using scrollbar classes in common, filter select and titles moved, pm2 log css bugfix, rtl adjustments, mapbox does not support rtl, created dialogue_button css class for all dialogue buttons, dialogue_lov moved to common, chart 2 bugfix sort days as integers both databases, bugfix sql start parameters admin oracle, bugfix update app record control enabled and async

--- a/apps/admin/css/admin.css
+++ b/apps/admin/css/admin.css
@@ -80,16 +80,6 @@
 	box-sizing: border-box;
 }
 
-.button {
-	background: none;
-	border: none;
-	width: 60px;
-	height: 60px;
-	padding:0px;
-	text-transform: uppercase;
-	cursor:pointer;
-}
-
 body.theme_light{
 	color: #404040;
 	background: rgb(81, 171, 255);
@@ -106,11 +96,11 @@ body.theme_light{
 .theme_light .admin_login_input{
 	border: 1px solid #ddd;
 }
-.theme_light .button:hover, .theme_light .button:active{
-	color:#6ab344 !important;
+.theme_light .dialogue_button{
+	color: #404040 !important;
 }
-.theme_light .button {
-	font-size: 30px;
+.theme_light .dialogue_button:hover, .theme_light .dialogue_button:active{
+	color:#6ab344 !important;
 }
 .theme_light .toolbar_button{
 	color: #404040 !important;
